included word wrap to table to prevent text from extending outside cell when resizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,7 @@ table {
     table-layout: fixed;
     width: 100%;
     height: auto;
+    word-wrap: break-word;
 }
 
 table {
